--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "packages/gluon"]
 	path = packages/gluon
 	url = https://github.com/freifunk-gluon/packages.git
+[submodule "packages/fff-config-mode"]
+	path = packages/fff-config-mode
+	url = https://github.com/ff-kbu/fff-config-mode.git
