--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "packages/fff-config-mode"]
 	path = packages/fff-config-mode
 	url = https://github.com/ff-kbu/fff-config-mode.git
+[submodule "packages/pkg_lighttpd"]
+	path = packages/pkg_lighttpd
+	url = https://github.com/yanosz/pkg_lighthtpd
